packages/engine/src/tests/snapshots/engine__tests__partition__broken_unclosed_dollar_eof_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      12
    ],
    "items": 3,
    "width": 63.76,
    "height": 44.8,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      14,
      21
    ],
    "items": 6,
    "width": 27.29,
    "height": 37.64,
    "x": 0.0,
    "y": 62.72
  }
]
