packages/engine/src/tests/snapshots/engine__tests__partition__broken_unclosed_dollar_eof_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 21,
      "end": 21
    },
    "severity": "warning",
    "message": "unclosed math equation; inserted a closing `$`",
    "hints": []
  }
]
