packages/engine/src/tests/snapshots/engine__tests__partition__broken_unclosed_dollar_mid_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      14
    ],
    "items": 7,
    "width": 57.6,
    "height": 59.88,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      16,
      22
    ],
    "items": 2,
    "width": 54.16,
    "height": 22.4,
    "x": 0.0,
    "y": 78.24
  }
]
