packages/engine/src/tests/snapshots/engine__tests__partition__broken_unclosed_dollar_mid_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 14,
      "end": 15
    },
    "severity": "warning",
    "message": "unclosed math equation; inserted a closing `$`",
    "hints": []
  }
]
