packages/engine/src/tests/snapshots/engine__tests__partition__broken_unclosed_dollar_start_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 8,
    "width": 27.29,
    "height": 37.64,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      9,
      15
    ],
    "items": 2,
    "width": 54.16,
    "height": 22.4,
    "x": 0.0,
    "y": 56.0
  }
]
