packages/engine/src/tests/snapshots/engine__tests__partition__broken_unclosed_paren_multi_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 14,
      "end": 15
    },
    "severity": "error",
    "message": "unclosed delimiter",
    "hints": []
  }
]
