packages/engine/src/tests/snapshots/engine__tests__partition__broken_unclosed_paren_nested_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 2,
    "width": 63.76,
    "height": 22.4,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      9,
      18
    ],
    "items": 8,
    "width": 42.01,
    "height": 17.93,
    "x": -20.93,
    "y": 40.32
  },
  {
    "range": [
      20,
      26
    ],
    "items": 2,
    "width": 54.16,
    "height": 22.4,
    "x": 0.0,
    "y": 76.81
  }
]
