packages/engine/src/tests/snapshots/engine__tests__partition__broken_unclosed_quote_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 2,
    "width": 63.76,
    "height": 22.4,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      9,
      21
    ],
    "items": 4,
    "width": 61.18,
    "height": 18.0,
    "x": 0.0,
    "y": 40.32
  },
  {
    "range": [
      23,
      39
    ],
    "items": 3,
    "width": 92.56,
    "height": 44.8,
    "x": 0.0,
    "y": 76.88
  }
]
